--- a/src/app/Account/register.component.html
+++ b/src/app/Account/register.component.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="form-group">
                             <label for="confirmPassword">Confirm Password </label>
-                            <input type="confirmPassword" class="form-control" name="confirmPassword" formControlName="confirmPassword" />
+                            <input type="password" class="form-control" name="confirmPassword" formControlName="confirmPassword" />
                             <span class="text-danger" *ngIf="(RegisterFormControl['confirmPassword'].touched || submitted) && (RegisterFormControl['confirmPassword'].errors?.['required'])">Password is required</span>
                         </div>
                         <div class="form-group">
